Fix configuration passing.

--- a/notebooks/tesseract_demo.ipynb
+++ b/notebooks/tesseract_demo.ipynb
@@ -162,7 +162,7 @@
     "    if (\".png\" not in file):\n",
     "        continue\n",
     "    image = PIL.Image.open(file)\n",
-    "    print(pytesseract.image_to_string(image, config=conf))\n",
+    "    print(pytesseract.image_to_string(image))\n",
     "    display(Image(filename=file))\n",
     "    greyscale = image.convert('L')\n",
     "#        display(greyscale)\n",
